php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44557 Fix crash in imap_setacl
Submitted: 2008-03-28 13:20 UTC Modified: 2008-03-28 16:46 UTC
From: thomas dot jarosch at intra2net dot com Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 5.2.5 OS: Linux
Private report: No CVE-ID: None
 [2008-03-28 13:20 UTC] thomas dot jarosch at intra2net dot com
Description:
------------
Hello together,

attached patch fixes a crash in imap_setacl if you
pass an integer as username.

Cheers,
Thomas



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-03-28 13:22 UTC] thomas dot jarosch at intra2net dot com
--- php-5.2.5/ext/imap/php_imap.c       Fri Mar 28 13:28:28 2008
+++ php-5.2.5.new/ext/imap/php_imap.c   Fri Mar 28 13:58:18 2008
 PHP_FUNCTION(imap_setacl)
@@ -1080,6 +1101,7 @@
        ZEND_FETCH_RESOURCE(imap_le_struct, pils *, 
streamind, -1, "imap", le_imap);

        convert_to_string_ex(mailbox);
+       convert_to_string_ex(id);
        convert_to_string_ex(rights);

        RETURN_BOOL(imap_setacl(imap_le_struct->imap_stream, 
Z_STRVAL_PP(mailbox), Z_STRVAL_PP(id), Z_STRVAL_PP(rights)));
 [2008-03-28 16:46 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Thanks for patch!
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 13 09:00:01 2026 UTC