Fixed bug #44557 (Crash in imap_setacl when supplied integer as username) (patch by Thomas Jarosch)